# substrate-node-suped-up

./: Cargo.toml  test.txt
.maintain/: rename-crates-for-2.0.sh
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  service.rs
node/executor/: Cargo.toml
node/inspect/: Cargo.toml
node/inspect/src/: command.rs
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
