[workspace]
resolver = "2"

members = [
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/rpc",
	"node/runtime",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"


[patch.crates-io]


frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-election-provider-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-support-procedural = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-bags-list = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-babe = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-10" }

pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-bounties = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-contracts = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-contracts-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-gilt = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-lottery = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-mmr = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-offences = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-society = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-tips = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-transaction-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-uniques = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-vesting = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-chain-spec-derive = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-executor-common = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-executor-wasmi = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-network-gossip = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-peerset = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-proposer-metrics = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-service-test =  { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-state-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-sync-state-rpc =  { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-api-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-consensus-vrf = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-database = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-debug-derive = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-npos-elections = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-panic-handler = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-sandbox = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-serializer = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-tasks = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-wasm-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-frame-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }