[package]
name = "node-executor"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = { version = "1.0", features = ["derive"] }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "3.0.0-dev", path = "../runtime" }
sc-executor = { version = "0.10.0-dev" }
sp-core = { version = "4.0.0-dev" }
sp-keystore = { version = "0.10.0-dev" }
sp-state-machine = { version = "0.10.0-dev" }
sp-trie = { version = "4.0.0-dev" }
frame-benchmarking = { version = "4.0.0-dev" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "4.0.0-dev" }
frame-system = { version = "4.0.0-dev" }
pallet-balances = { version = "4.0.0-dev" }
pallet-contracts = { version = "4.0.0-dev" }
pallet-im-online = { version = "4.0.0-dev" }
pallet-timestamp = { version = "4.0.0-dev" }
pallet-treasury = { version = "4.0.0-dev" }
sp-application-crypto = { version = "4.0.0-dev" }
sp-consensus-babe = { version = "0.10.0-dev" }
sp-runtime = { version = "4.0.0-dev" }
sp-externalities = { version = "0.10.0-dev" }
wat = "1.0"
futures = "0.3.9"

[features]
wasmtime = ["sc-executor/wasmtime"]
wasmi-errno = ["sc-executor/wasmi-errno"]
stress-test = []
