[package]
name = "node-inspect"
version = "0.9.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
sc-cli = { version = "0.10.0-dev" }
sc-client-api = { version = "4.0.0-dev" }
sc-executor = { version = "0.10.0-dev" }
sc-service = { version = "0.10.0-dev", default-features = false }
sp-blockchain = { version = "4.0.0-dev" }
sp-core = { version = "4.0.0-dev" }
sp-runtime = { version = "4.0.0-dev" }
structopt = "0.3.8"
