[package]
name = "node-rpc"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "18.0.0"
node-primitives = { version = "2.0.0", path = "../primitives" }
pallet-contracts-rpc = { version = "4.0.0-dev" }
pallet-mmr-rpc = { version = "3.0.0" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev" }
sc-client-api = { version = "4.0.0-dev" }
sc-consensus-babe = { version = "0.10.0-dev" }
sc-consensus-babe-rpc = { version = "0.10.0-dev" }
sc-consensus-epochs = { version = "0.10.0-dev" }
sc-chain-spec = { version = "4.0.0-dev" }
sc-finality-grandpa = { version = "0.10.0-dev" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev" }
sc-rpc-api = { version = "0.10.0-dev" }
sc-rpc = { version = "4.0.0-dev"  }
sc-sync-state-rpc = { version = "0.10.0-dev"  }
sp-api = { version = "4.0.0-dev"  }
sp-block-builder = { version = "4.0.0-dev" }
sp-blockchain = { version = "4.0.0-dev"  }
sp-keystore = { version = "0.10.0-dev"  }
sp-consensus = { version = "0.10.0-dev"  }
sp-consensus-babe = { version = "0.10.0-dev"  }
sp-runtime = { version = "4.0.0-dev" }
substrate-frame-rpc-system = { version = "4.0.0-dev" }
